main.css
.page {
  margin: 0px;
}

.main {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
}

.header {
  color: #FFFFFF;
  padding: 10px 25px 15px 25px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.14);
  background-color: #5A6378;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.header__description {
  font-size: 2em;
  padding-left: 25px;
  padding-right: 25px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.header__github {
  height: 45px;
}

.github {
  cursor: pointer;
}

.github:hover {
  opacity: 0.7;
}

.logo {
  display: flex;
  flex-direction: row;
}

.logo__icon {
  padding-top: 3px;
  padding-right: 7px;
}

.logo__text {
  display: flex;
  flex-direction: column;
}

.logo_elm {
  font-size: 1.6em;
}

.logo_news {
  font-size: 1.1em;
  line-height: 9px;
  padding-left: 1px;
}

.body {
  padding: 10px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  background-color: #DDDDDD
}

.spinner {
  border: 16px solid #FFFFFF;
  border-top: 16px solid #5A6378;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  animation: spin 1.5s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.cards {
  max-width: 1000px
}

.card {
  display: flex;
  flex-direction: row;
  background-color: #FFFFFF;
  padding: 10px;
  margin: 10px;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14);
}

.card__link {
  cursor: pointer;
  text-decoration: none;
  color: #000000;
}

.tag {
  padding: 5px;
  min-width: 100px;
  width: 100px;
  height: 20px;
  text-align: center;
  margin: 10px;
  align-self: center;
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.14);
  color: #FFFFFF;
  text-shadow: 0 1px 0 #777777;
  cursor: pointer;
}

.card__description {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  flex-grow: 1;
  margin: 0px 10px;
}

.card__description__header {
  margin-bottom: 8px;
}

.card__description__title {
  color: #000000;
  font-weight: bold;
  text-decoration: none;
  pointer-events: auto;
  padding-right: 7px;
}

.card__description__title:visited {
  color: #888888;
}

.card__description__domain {
  color: #888888;
  font-size: 0.8em;
  display: inline-block;
}

.card__date {
  align-self: center;
  min-width: 110px;
}

.footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  min-height: 50px;
  text-align: center;
  box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.14);
  background-color: #5A6378;
  padding: 10px;
}

.footer__description {
  margin-left: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: #FFFFFF;
}

.error {
  position: fixed;
  right: 12px;
  color: #FFFFFF;
  width: 400px;
  padding: 15px;
  -webkit-filter: drop-shadow(0 8.4px 8.4px rgba(0, 0, 0, 0.25)) drop-shadow(0 6px 3px rgba(0, 0, 0, 0.22));
  filter: drop-shadow(0 8.4px 8.4px rgba(0, 0, 0, 0.25)) drop-shadow(0 6px 3px rgba(0, 0, 0, 0.22));
  background-image: linear-gradient(to bottom, #EE5F5B, #BD362F);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.error__content {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding-left: 10px
}

.error__text {
  font-weight: bold;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}

.error__img {
  height: 30px;
  padding-right: 15px
}

.close {
  font: 18px/100% arial, sans-serif;
  text-shadow: 0 1px 0 #777777;
  align-self: flex-start;
  cursor: pointer;
  padding-left: 10px;
}

/* Color */

.elm_dark_blue {
  background-color: #5A6378;
}

.elm_light_blue {
  background-color: #60B5CC
}

.elm_yellow {
  background-color: #F0AD00
}

.elm_green {
  background-color: #7FD13B
}

/* Responsive */

@media all and (max-width: 1000px) {
  .cards {
    max-width: 100%;
  }
}

@media all and (max-width: 900px) {
  .header__description {
    display: none;
  }
}

@media all and (max-width: 600px) {
  .tag {
    display: none;
  }
  .card {
    display: block;
    padding-bottom: 30px;
  }
  .card__description{
    display: block;
  }
  .card__author {
    float: left;
  }
  .card__date {
    float: right;
    min-width: auto;
    padding-right: 10px;
  }
}

